--- a/index.html
+++ b/index.html
@@ -1,391 +1,49 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-<script src="dist/axios.min.js"></script>
-<script src="dist/canvasjs.min.js"></script>
-<script>
+	<script src="dist/axios.min.js"></script>
+	<script src="dist/canvasjs.min.js"></script>
+</head>
 
-	window.onload = function() {
-
-		const local = getParameterByName('local') || 'false'
-		const query = getParameterByName('q') || 'cpall'
-		const year = getParameterByName('y') || '2007'
-
-		document.getElementById('input-q').value = query
-		document.getElementById('input-y').value = year
-
-		window.clickLink = function clickLink(href) {
-			Object.assign(document.createElement('a'), {
-				target: '_blank',
-				href: href + query,
-			}).click();
-		}
-
-		function getParameterByName(name, url) {
-			if (!url) url = window.location.href;
-			name = name.replace(/[\[\]]/g, '\\$&');
-			var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-					results = regex.exec(url);
-			if (!results) return null;
-			if (!results[2]) return '';
-			return decodeURIComponent(results[2].replace(/\+/g, ' '));
-		}
-
-		function transform(financialData, column, divide) {
-			return financialData.slice(1).filter(data => data['Quarter'] !== 9).map(data => {
-				return {
-					label: 'Q' + data['Quarter'] + ' ' + data['Fiscal'],
-					y: parseFloat(data[column]) / divide
-				}
-			})
-		}
-
-		function drawChart(financialData) {
-
-			const chart1 = new CanvasJS.Chart('chartContainer1', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: query.toUpperCase()
-				},
-				axisY: {
-					title: 'Million THB',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart1.render();
-					}
-				},
-				data: ['Revenue', 'GrossProfit', 'SGA', 'DA', 'NetProfit'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: "##.00",
-						dataPoints: transform(financialData, column, 1000)
-					}
-				})
-			});
-			const chart2 = new CanvasJS.Chart('chartContainer2', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: ' '
-				},
-				axisY: {
-					title: 'Million THB',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === 'undefined' || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart2.render();
-					}
-				},
-				data: ['Asset', 'TotalDebt', 'Equity', 'Cash'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: '##.00',
-						dataPoints: transform(financialData, column, 1000)
-					}
-				})
-			});
-			const chart3 = new CanvasJS.Chart('chartContainer3', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: ' '
-				},
-				axisY: {
-					title: 'Million THB',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === 'undefined' || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart3.render();
-					}
-				},
-				data: ['OperatingActivities', 'FinancingActivities', 'InvestingActivities'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: '##.00',
-						dataPoints: transform(financialData, column, 1000)
-					}
-				})
-			});
-			const chart4 = new CanvasJS.Chart('chartContainer4', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: ' '
-				},
-				axisY: {
-					title: 'Days',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === 'undefined' || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart4.render();
-					}
-				},
-				data: ['CashCycle'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: '##.00',
-						dataPoints: transform(financialData, column, 1)
-					}
-				})
-			});
-			const chart5 = new CanvasJS.Chart('chartContainer5', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: ' '
-				},
-				axisY: {
-					title: '(%)',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === 'undefined' || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart5.render();
-					}
-				},
-				data: ['GPM', 'SGAPerRevenue', 'NPM'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: '##.00%',
-						dataPoints: transform(financialData, column, 100)
-					}
-				})
-			});
-			const chart6 = new CanvasJS.Chart('chartContainer6', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: ' '
-				},
-				axisY: {
-					title: '(%)',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === 'undefined' || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart6.render();
-					}
-				},
-				data: ['ROE', 'ROA'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: '##.00%',
-						dataPoints: transform(financialData, column, 1)
-					}
-				})
-			});
-			const chart7 = new CanvasJS.Chart('chartContainer7', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: ' '
-				},
-				axisY: {
-					title: 'Multiply',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === 'undefined' || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart7.render();
-					}
-				},
-				data: ['PriceEarningRatio', 'PriceBookValue', 'EVPerEbitDA'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: '##.00',
-						dataPoints: transform(financialData, column, 1)
-					}
-				})
-			});
-			const chart8 = new CanvasJS.Chart('chartContainer8', {
-				animationEnabled: false,
-				theme: 'light2',
-				title:{
-					text: ' '
-				},
-				axisY: {
-					title: 'Million THB',
-					crosshair: {
-						enabled: true
-					}
-				},
-				toolTip:{
-					shared: true
-				},
-				legend:{
-					cursor: 'pointer',
-					verticalAlign: 'bottom',
-					itemclick: (e) => {
-						if (typeof(e.dataSeries.visible) === 'undefined' || e.dataSeries.visible) {
-							e.dataSeries.visible = false;
-						} else{
-							e.dataSeries.visible = true;
-						}
-						chart8.render();
-					}
-				},
-				data: ['MKTCap'].map(column => {
-					return {
-						type: 'line',
-						showInLegend: true,
-						name: column,
-						yValueFormatString: '##.00',
-						dataPoints: transform(financialData, column, 1000)
-					}
-				})
-			});
-			chart1.render();
-			chart2.render();
-			chart3.render();
-			chart4.render();
-			chart5.render();
-			chart6.render();
-			chart6.render();
-			chart7.render();
-			chart8.render();
-		}
-
-		function init() {
-			if (!query) return;
-
-			var corsServer = local === 'true' ? 'http://localhost:8080' : 'https://cors-anywhere.herokuapp.com'
-
-			axios.get(`${corsServer}/https://www.finnomena.com/fn3/api/stock/quote?name=${query}`)
-        .then((response) => {
-          return axios.get(`${corsServer}/https://www.finnomena.com/fn3/api/stock/financial?fiscal=${year}&securityID=${response.data.data.ID}`)
-        }).then((response) => {
-          drawChart(response.data.data)
-        }).catch(console.error)
-		}
-
-		init()
-	}
-
-</script>
-<div>
-  <form action="" method="get">
-    Symbol: <input id="input-q" type="text" name="q">
-    Year: <input id="input-y" type="number" name="y">
-    <input type="submit" value="Submit">
-	</form>
+<body>
 	<div>
-		Open in:
-		<button onclick="clickLink('https://www.jitta.com/stock/bkk:')">Jitta</button>
-		<button onclick="clickLink('https://www.set.or.th/set/companyprofile.do?symbol=')">SET.or.th</button>
-		<button onclick="clickLink('http://siamchart.com/stock-chart/')">Siamchart</button>
+		<form action="" method="get">
+			Symbol: <input id="input-q" type="text" name="q">
+			Year: <input id="input-y" type="number" name="y">
+			<input type="submit" value="Submit">
+		</form>
+		<div>
+			Open in:
+			<button onclick="clickLink('https://www.jitta.com/stock/bkk:')">Jitta</button>
+			<button onclick="clickLink('https://www.set.or.th/set/companyprofile.do?symbol=')">SET.or.th</button>
+			<button onclick="clickLink('http://siamchart.com/stock-chart/')">Siamchart</button>
+		</div>
+		<table>
+			<thead>
+				<tr>
+					<th>F-Score (8 Points)</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Annually: <span id="fscore-a">-</span></td>
+				</tr>
+				<tr>
+					<td>Quarterly: <span id="fscore-q">-</span></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-</div>
-<div id="chartContainer1" style="height: 400px; width: 100%; margin: 0px auto;"></div>
-<div id="chartContainer2" style="height: 400px; width: 100%; margin: 0px auto;"></div>
-<div id="chartContainer3" style="height: 400px; width: 100%; margin: 0px auto;"></div>
-<div id="chartContainer4" style="height: 400px; width: 100%; margin: 0px auto;"></div>
-<div id="chartContainer5" style="height: 400px; width: 100%; margin: 0px auto;"></div>
-<div id="chartContainer6" style="height: 400px; width: 100%; margin: 0px auto;"></div>
-<div id="chartContainer7" style="height: 400px; width: 100%; margin: 0px auto;"></div>
-<div id="chartContainer8" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer1" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer2" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer3" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer4" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer5" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer6" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer7" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<div id="chartContainer8" style="height: 400px; width: 100%; margin: 0px auto;"></div>
+	<script src="index.js"></script>
 </body>
+
 </html>
