--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		</form>
 		<div>
 			Open in:
-			<button onclick="clickLink('https://www.jitta.com/stock/bkk:')">Jitta</button>
-			<button onclick="clickLink('https://www.set.or.th/set/companyprofile.do?symbol=')">SET.or.th</button>
-			<button onclick="clickLink('http://siamchart.com/stock-chart/')">Siamchart</button>
+			<a id="jitta" target="_blank" rel=“noopener”><button>Jitta</button></a>
+			<a id="set" target="_blank" rel=“noopener”><button>SET.or.th</button></a>
+			<a id="siamchart" target="_blank" rel=“noopener”><button>Siamchart</button></a>
 		</div>
 		<div>Display: 
 			<select id="display">
